src/style.css
:root {
  padding-left: auto;
  padding-right: auto;

  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background: rgb(16,16,16);
  background: linear-gradient(0deg, rgba(16,16,16,1) 0%, rgba(100,108,255,1) 100%);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

img {
  transition: all 0.5s ease;
  border-radius: 15px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 99%;
}

body {
  overflow-x: hidden;
  position: relative;
}

h1 {
  top: 1%;
  padding-left: 0.5%;
  font-size: 2.2em;
  line-height: 1.1;
}

h2 {
  top: 0.5%;
  padding: 0.5%;
  font-size: 1.8em;
  line-height: 1.0;
}

h3 {
  top: 0.5%;
  padding: 0.5%;
  font-size: 1.4em;
  line-height: 1.0;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.card {
  padding: 2em;
}

p, label, input {
  padding: 1%;
  font-size: 1.3em;
  transition: all 0.5s ease;
}

#app {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: left;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

